2014-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.xsl (toc.section.depth): Set to 4.
	* ntsec.xml: Revamp account mapping documentation to account for the
	new db_home, db_shell, db_gecos settings.

2014-12-05  Yaakov Selkowitz  <yselkowitz@cygwin.com>

	* new-features.xml (ov-new1.7.34): Document qsort_r and __bsd_qsort_r.
	* posix.xml (std-bsd): Add qsort_r.
	(std-gnu): Ditto.
	(std-notes): Add section for qsort_r.

2014-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.34): Add latest changes.

2014-11-28  Yaakov Selkowitz  <yselkowi@redhat.com>

	* Makefile.in (XSLTPROC): Remove.
	(cygwin-ug-net/cygwin-ug-net.pdf): Build with xmlto pdf.
	(cygwin-api/cygwin-api.pdf): Ditto.
	(faq/faq.html): Fix extraneous anchor removal.

2014-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (passwd): Align to latest changes.

2014-11-13  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.34): Add new section.
	(ov-new1.7.33): Reflect intermediate 1.7.33 release.

2014-11-07  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (mkgroup): Align to changed usage.
	(mkpasswd): Ditto.

2014-11-07  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (mkpasswd): Change /etc/group to /etc/passwd.

2014-11-05  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): Document xdr and atexit.

2014-10-30  David Rothenberger  <daveroth@acm.org>

	* ntsec.xml: Fix typo.

2014-10-29  Dave Habermann  <dahabermann@dow.com>

	* ntsec.xml (ntsec-mapping-caching): Describe service dependencies
	in terms of cygserver.

2014-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* xidepend: Make PDF file dependent on the same input files as the
	HTML file of the same name to trigger automatic rebuild of PDFs on
	source file changes as well.

2014-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.xml: Change default setting of dosfilewarning.